<resources>
    <string name="app_name">Calculator</string>
    <string name="version_info">Version 2.0</string>
    <string name="admob_app_id">ca-app-pub-6829640689561307~8674643700</string>
    <string name="banner_adUnitId">ca-app-pub-6829640689561307/4352255318</string>
    <string name="interstitial_AdUnitId">ca-app-pub-6829640689561307/6136233989</string>
    <string name="title_activity_standard">Standard</string>
    <string name="title_activity_scientific">Scientific</string>
    <string name="title_fragment_history">History</string>
    <string name="title_activity_programmer">Programmer</string>
    <string name="title_activity_date_calculation">Date Calculation</string>
    <string name="title_activity_unit_converter">Unit Converter</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_send_feedback">Send Feedback</string>
    <string name="title_activity_rate_app">Rate This App</string>
    <string name="nav_drawer_opened">drawer opened</string>
    <string name="nav_drawer_closed">drawer closed</string>
    <string name="nav_header_title">Calculator</string>
    <string name="feedback_support_email">feedbackToPrime@gmail.com</string>
    <string name="feedback_email_subject">Feedback\u2026</string>
    <string name="feedback_email_extra_text">Dear Prime,</string>
    <string name="app_market_uri">http://www.google.com/?id=</string>
    <string name="about_asking_for_review_message">If you enjoy using Calculator, please share a nice review. It really helps!</string>
    <string name="about_message_2">This is a free version of PRIME\'s Calculator</string>
    <string name="about_copyright_string">Copyright © 2019 - PRIME - All Rights Reserved</string>
    <string name="about_for_os">for Android</string>
    <string name="const_e" translatable="false">e</string>
    <string name="const_pi" translatable="false">π</string>
    <string name="const_phi" translatable="false">φ</string>
    <string name="op_sqrt" translatable="false">\u00B2√</string>
    <string name="op_cbrt" translatable="false">\u221B</string>
    <string name="op_root" translatable="false">\u207f√</string>
    <string name="op_fact" translatable="false">!</string>
    <string name="op_pct" translatable="false">%</string>
    <string name="op_mul" translatable="false">×</string>
    <string name="op_sub" translatable="false">−</string>
    <string name="op_add" translatable="false">+</string>
    <string name="op_div" translatable="false">÷</string>
    <string name="op_mod" translatable="false">|</string>
    <string name="op_sqr" translatable="false">×\u00B2</string>
    <string name="op_cube" translatable="false">×\u00B3</string>
    <string name="op_pow" translatable="false">×ʸ</string>
    <string name="fun_sin" translatable="false">sin</string>
    <string name="fun_cos" translatable="false">cos</string>
    <string name="fun_tan" translatable="false">tan</string>
    <string name="fun_arcsin" translatable="false">sin\u207B\u00B9</string>
    <string name="fun_arccos" translatable="false">cos\u207B\u00B9</string>
    <string name="fun_arctan" translatable="false">tan\u207B\u00B9</string>
    <string name="fun_hypsin" translatable="false">sinh</string>
    <string name="fun_hypcos" translatable="false">cosh</string>
    <string name="fun_hyptan" translatable="false">tanh</string>
    <string name="fun_archypsin" translatable="false">sinh\u207B\u00B9</string>
    <string name="fun_archypcos" translatable="false">cosh\u207B\u00B9</string>
    <string name="fun_archyptan" translatable="false">tanh\u207B\u00B9</string>
    <string name="fun_log_base_2" translatable="false">log\u2082</string>
    <string name="fun_log_base_10" translatable="false">log\u2081\u2080</string>
    <string name="fun_log_base_e" translatable="false">log\u2091</string>
    <string name="fun_log_base_n" translatable="false">log\u2099</string>
    <string name="lparen" translatable="false">(</string>
    <string name="rparen" translatable="false">)</string>
    <string name="dec_point">.</string>
    <string name="digit_0" translatable="false">0</string>
    <string name="digit_1" translatable="false">1</string>
    <string name="digit_2" translatable="false">2</string>
    <string name="digit_3" translatable="false">3</string>
    <string name="digit_4" translatable="false">4</string>
    <string name="digit_5" translatable="false">5</string>
    <string name="digit_6" translatable="false">6</string>
    <string name="digit_7" translatable="false">7</string>
    <string name="digit_8" translatable="false">8</string>
    <string name="digit_9" translatable="false">9</string>
    <string name="mode_deg">DEG</string>
    <string name="mode_rad">RAD</string>
    <string name="mode_grad">GRAD</string>
    <string name="is_equal_to" translatable="false">=</string>
    <string name="del">⌫</string>
    <string name="memory_recall" translatable="false">MR</string>
    <string name="memory_store" translatable="false">MS</string>
    <string name="memory_subtract" translatable="false">M\u2212</string>
    <string name="memory_add" translatable="false">M+</string>
    <string name="memory_clear" translatable="false">MC</string>
    <string name="shift">\u2b06</string>
    <string name="theme_switch">Enable Dark Theme</string>
    <string name="date_cal_title_from_date">From</string>
    <string name="date_cal_hint_day">Day</string>
    <string name="date_cal_hint_month">Month</string>
    <string name="date_cal_hint_year">Year</string>
    <string name="date_cal_radio_add">Add</string>
    <string name="date_cal_radio_subtract">Subtract</string>
    <string name="date_cal_hint_days">Days</string>
    <string name="date_cal_hint_months">Months</string>
    <string name="date_cal_hint_years">Years</string>
    <string name="date_cal_title_result">Result</string>
    <string name="date_cal_title_start_date">Start Date</string>
    <string name="date_cal_hint_time">Time</string>
    <string name="date_cal_title_end_date">End Date</string>
    <string name="date_cal_title_difference">Difference</string>
    <string name="date_cal_text_same_dates">Same Dates</string>
    <string name="date_cal_title_alternative_time_units">Also equals to</string>
    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string name="speed">Speed</string>
    <string name="angle">Angle</string>
    <string name="volume">Volume</string>
    <string name="length">Length</string>
    <string name="temperature">Temperature</string>
    <string name="weight_and_mass">Weight &amp; Mass</string>
    <string name="energy">Energy</string>
    <string name="area">Area</string>
    <string name="pressure">Pressure</string>
    <string name="power">Power</string>
    <string name="data">Data</string>
    <string name="time">Time</string>
    <string name="sound">Sound</string>
    <string name="currency">Currency</string>
    <string name="yoctometre">Yoctometre</string>
    <string name="zeptometre">Zeptometre</string>
    <string name="attometre">Attometre</string>
    <string name="femtometre">Femtometre</string>
    <string name="picometre">Picometre</string>
    <string name="nanometre">Nanometre</string>
    <string name="micrometre">Micrometre (Micron)</string>
    <string name="millimetre">Millimetre</string>
    <string name="centimetre">Centimetre</string>
    <string name="metre">Metre</string>
    <string name="kilometre">Kilometre</string>
    <string name="mile">Mile</string>
    <string name="nautical_mile">Nautical Mile</string>
    <string name="yard">Yard</string>
    <string name="foot">Foot</string>
    <string name="inch">Inch</string>
    <string name="astronomical_unt">Astronomical Unit</string>
    <string name="light_year">Light Year</string>
    <string name="par_sec">Par Sec</string>
    <string name="plank_length">Plank Length</string>
    <string name="carat">Carat</string>
    <string name="milligram">Milligram</string>
    <string name="centigram">Centigram</string>
    <string name="decigram">Decigram</string>
    <string name="kilogram">Kilogram</string>
    <string name="pound">Pound</string>
    <string name="gram">Gram</string>
    <string name="decagram">Decagram</string>
    <string name="hectogram">Hectogram</string>
    <string name="ounce">Ounce</string>
    <string name="grain">Grain</string>
    <string name="stone">Stone</string>
    <string name="metric_ton">Ton (metric)</string>
    <string name="short_ton">Ton (US/short)</string>
    <string name="long_ton">Ton (UK/long)</string>
    <string name="microsecond">Microsecond</string>
    <string name="millisecond">Millisecond</string>
    <string name="second">Second</string>
    <string name="minute">Minute</string>
    <string name="hour">Hour</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="year">Year</string>
    <string name="nanosecond">Nanosecond</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>
    <string name="rankine">Rankine</string>
    <string name="delisle">Delisle</string>
    <string name="newton">Newton</string>
    <string name="reaumur">Réaumur</string>
    <string name="romer">Rømer</string>
    <string name="amphere">Amphere</string>
    <string name="milliamphere">Milliamphere</string>
    <string name="kiloamphere">Kiloamphere</string>
    <string name="bit">Bit</string>
    <string name="bytes">Byte</string>
    <string name="kilobits">Kilobit</string>
    <string name="kibibits">Kibibit</string>
    <string name="kilobytes">Kilobyte</string>
    <string name="kibibytes">Kibibyte</string>
    <string name="megabits">Megabit</string>
    <string name="mebibits">Mebibit</string>
    <string name="megabytes">Megabyte</string>
    <string name="mebibytes">Mebibyte</string>
    <string name="gigabits">Gigabit</string>
    <string name="gibibits">Gibibit</string>
    <string name="gigabytes">Gigabyte</string>
    <string name="gibibytes">Gibibyte</string>
    <string name="terabits">Terabit</string>
    <string name="tebibits">Tebibit</string>
    <string name="terabytes">Terabyte</string>
    <string name="tebibytes">Tebibyte</string>
    <string name="petabits">Petabit</string>
    <string name="pebibits">Pebibit</string>
    <string name="petabytes">Petabyte</string>
    <string name="pebibytes">Pebibyte</string>
    <string name="exabits">Exabit</string>
    <string name="exbibits">Exbibit</string>
    <string name="exabytes">Exabyte</string>
    <string name="exbibytes">Exbibyte</string>
    <string name="zetabits">Zetabit</string>
    <string name="zebibits">Zebibit</string>
    <string name="zetabytes">Zetabyte</string>
    <string name="zebibytes">Zebibyte</string>
    <string name="yotabits">Yottabit</string>
    <string name="yobibits">Yobibit</string>
    <string name="yottabytes">Yottabyte</string>
    <string name="yobibytes">Yobibyte</string>
    <string name="sq_millimetres">Square Millimetre</string>
    <string name="sq_centimetres">Square Centimetre</string>
    <string name="sq_metres">Square Metre</string>
    <string name="hectares">Hectare</string>
    <string name="sq_kilometres">Square Kilometre</string>
    <string name="sq_inches">Square Inche</string>
    <string name="sq_feet">Square Foot</string>
    <string name="sq_yards">Square Yard</string>
    <string name="acres">Acre</string>
    <string name="sq_miles">Square Mile</string>
    <string name="millilitres">Millilitre</string>
    <string name="cbc_centimetres">Cubic centimetre</string>
</resources>