<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:columnCount="4"
    android:rowCount="6"
    android:useDefaultMargins="true">

    <Button
        android:id="@+id/dec_point"
        style="@style/Standard_MaterialButtonStyle"
        android:layout_row="5"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="@dimen/button_margin"
        android:onClick="onClick"
        android:text="@string/dec_point" />

    <Button
        android:id="@+id/digit_0"
        android:layout_row="5"
        style="@style/Standard_MaterialButtonStyle"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/digit_0" />

    <Button
        android:id="@+id/equal"
        android:layout_row="5"
        style="@style/Standard_MaterialButtonStyle"
        android:layout_rowWeight="1"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="?attr/accentColorPrimary"
        android:textColor="?attr/onAccentColorPrimary"

        android:text="@string/is_equal_to" />

    <Button
        android:id="@+id/digit_1"
        android:layout_row="4"
        style="@style/Standard_MaterialButtonStyle"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/digit_1" />

    <Button
        android:id="@+id/digit_2"
        android:layout_row="4"
        style="@style/Standard_MaterialButtonStyle"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/digit_2" />

    <Button
        android:id="@+id/digit_3"
        android:layout_row="4"
        style="@style/Standard_MaterialButtonStyle"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/digit_3" />

    <Button
        android:id="@+id/op_add"
        android:layout_row="4"
        style="@style/Standard_MaterialButtonStyle"
        android:layout_rowWeight="1"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="?attr/Standard_colorButtonSecondary"
        android:text="@string/op_add" />

    <Button
        android:id="@+id/digit_4"
        android:layout_row="3"
        style="@style/Standard_MaterialButtonStyle"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/digit_4" />

    <Button
        android:id="@+id/digit_5"
        android:layout_row="3"
        style="@style/Standard_MaterialButtonStyle"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/digit_5" />

    <Button
        android:id="@+id/digit_6"
        android:layout_row="3"
        style="@style/Standard_MaterialButtonStyle"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/digit_6" />

    <Button
        android:id="@+id/op_sub"
        android:layout_row="3"
        style="@style/Standard_MaterialButtonStyle"
        android:layout_rowWeight="1"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="?attr/Standard_colorButtonSecondary"
        android:text="@string/op_sub" />

    <Button
        android:id="@+id/digit_7"
        android:layout_row="2"
        style="@style/Standard_MaterialButtonStyle"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/digit_7" />

    <Button
        android:id="@+id/digit_8"
        android:layout_row="2"
        style="@style/Standard_MaterialButtonStyle"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/digit_8" />

    <Button
        android:id="@+id/digit_9"
        android:layout_row="2"
        style="@style/Standard_MaterialButtonStyle"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/digit_9" />

    <Button
        android:id="@+id/op_mul"
        android:layout_row="2"
        style="@style/Standard_MaterialButtonStyle"
        android:layout_rowWeight="1"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="?attr/Standard_colorButtonSecondary"
        android:text="@string/op_mul" />

    <Button
        android:id="@+id/lparen"
        android:layout_row="1"
        style="@style/Standard_MaterialButtonStyle"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="?attr/Standard_colorButtonSecondary"
        android:text="@string/lparen" />

    <Button
        android:id="@+id/rparen"
        android:layout_row="1"
        style="@style/Standard_MaterialButtonStyle"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="?attr/Standard_colorButtonSecondary"
        android:text="@string/rparen" />

    <Button
        android:id="@+id/op_mod"
        android:layout_row="1"
        style="@style/Standard_MaterialButtonStyle"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="?attr/Standard_colorButtonSecondary"
        android:text="@string/op_mod" />

    <Button
        android:id="@+id/op_div"
        android:layout_row="1"
        style="@style/Standard_MaterialButtonStyle"
        android:layout_rowWeight="1"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="?attr/Standard_colorButtonSecondary"
        android:text="@string/op_div" />

    <Button
        android:id="@+id/op_pct"
        android:layout_row="0"
        style="@style/Standard_MaterialButtonStyle"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="?attr/Standard_colorButtonSecondary"
        android:text="@string/op_pct" />

    <Button
        android:id="@+id/op_sqrt"
        android:layout_row="0"
        style="@style/Standard_MaterialButtonStyle"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="?attr/Standard_colorButtonSecondary"
        android:text="@string/op_sqrt" />

    <Button
        android:id="@+id/op_pow"
        android:layout_row="0"
        style="@style/Standard_MaterialButtonStyle"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="?attr/Standard_colorButtonSecondary"
        android:text="@string/op_pow" />

    <Button
        android:id="@+id/del"
        android:layout_row="0"
        style="@style/Standard_MaterialButtonStyle"
        android:layout_rowWeight="1"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="@dimen/button_margin"
        android:backgroundTint="?attr/Standard_colorButtonSecondary"/>

    <ImageButton
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="3"
        android:layout_columnWeight="1"
        android:clickable="false"
        android:focusable="false"
        android:layout_gravity="fill"
        android:layout_margin="@dimen/button_margin"
        android:background="@android:color/transparent"
        android:tint="?attr/primaryTextColor"
        android:src="@drawable/icon_backspace_arrow"/>
</GridLayout>