<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:elevation="8dp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:text="@string/app_name"
        android:textColor="?attr/accentColorPrimary"
        android:textSize="28sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:text="@string/about_for_os"
        android:textColor="?attr/primaryTextColor"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:text="@string/version_info"
        android:textColor="?attr/primaryTextColor"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:paddingLeft="30dp"
        android:paddingTop="8dp"
        android:paddingRight="30dp"
        android:text="@string/about_asking_for_review_message"
        android:textColor="?attr/primaryTextColor"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:paddingTop="8dp"
        android:text="@string/about_message_2"
        android:textColor="?attr/primaryTextColor"
        android:textSize="18sp" />

    <androidx.legacy.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        android:text="@string/about_copyright_string"
        android:textColor="?attr/secondaryTextColor"
        android:textSize="12sp" />
</LinearLayout>